src/tedi/components/buttons/button-group/button-group.module.scss
@use '@tedi-design-system/core/bootstrap-utility/breakpoints';

.tedi-button-group {
  display: flex;
  gap: 0;

  &--primary,
  &--secondary {
    .tedi-button-group__item {
      display: flex;
      align-items: center;
      justify-content: center;
      height: auto;
      text-align: center;
      cursor: pointer;
      border-radius: 0;

      &:first-child {
        border-top-left-radius: var(--button-radius-sm);
        border-bottom-left-radius: var(--button-radius-sm);
      }

      &:not(:first-child) {
        margin-left: -1px;
      }

      &:last-child {
        border-top-right-radius: var(--button-radius-sm);
        border-bottom-right-radius: var(--button-radius-sm);
      }

      &:focus-visible {
        z-index: 1;
      }

      @include breakpoints.media-breakpoint-down(md) {
        flex: 1;
      }

      &.tedi-button-group__item--size-default {
        min-height: var(--button-md-height);
        padding: calc(var(--button-md-padding-y) - 1px) var(--button-md-padding-x);
      }

      &.tedi-button-group__item--size-small {
        min-height: var(--button-sm-height);
        padding: calc(var(--button-sm-padding-y) - 1px) var(--button-sm-padding-x);
        font-size: var(--button-text-size-sm);
      }
    }
  }

  &--primary {
    .tedi-button-group__item {
      color: var(--button-group-primary-inactive-text);
      background-color: var(--button-group-primary-inactive-background);
      border: 1px solid var(--button-group-primary-inactive-border);

      &--disabled:disabled {
        color: var(--button-group-primary-disabled-text);
        background-color: var(--button-group-primary-disabled-background);
        border: 1px solid var(--button-group-primary-disabled-border);
      }

      &:hover:not(:disabled) {
        color: var(--button-group-primary-hover-text);
        background-color: var(--button-group-primary-hover-background);
        border-color: var(--button-group-primary-hover-border);
      }

      &.tedi-button-group__item--active:not(:disabled) {
        z-index: 1;
        color: var(--button-group-primary-selected-text);
        background-color: var(--button-group-primary-selected-background);
        border-color: var(--button-group-primary-selected-border);
      }

      &:focus-visible:not(:disabled, .tedi-button-group__item--active) {
        color: var(--button-group-primary-inactive-text);
        background-color: var(--button-group-primary-inactive-background);
        border: 1px solid var(--button-group-primary-inactive-border);
      }
    }
  }

  &--secondary {
    .tedi-button-group__item {
      color: var(--button-group-secondary-inactive-text);
      background-color: var(--button-group-secondary-inactive-background);
      border: 1px solid var(--button-group-secondary-inactive-border);

      &--disabled:disabled {
        color: var(--button-group-secondary-disabled-text);
        background-color: var(--button-group-secondary-disabled-background);
        border: 1px solid var(--button-group-secondary-disabled-border);
      }

      &:hover:not(:disabled) {
        color: var(--button-group-secondary-hover-text);
        background-color: var(--button-group-secondary-hover-background);
        border-color: var(--button-group-secondary-hover-border);
      }

      &.tedi-button-group__item--active:not(:disabled) {
        z-index: 1;
        color: var(--button-group-secondary-selected-text);
        background-color: var(--button-group-secondary-selected-background);
        outline: 2px solid var(--button-group-secondary-selected-border);
        outline-offset: -2px;
      }

      &:focus-visible:not(:disabled, .tedi-button-group__item--active) {
        color: var(--button-group-secondary-inactive-text);
        background-color: var(--button-group-secondary-inactive-background);
        border: 1px solid var(--button-group-secondary-inactive-border);
      }
    }
  }

  &--stretch {
    .tedi-button-group__item {
      flex: 1;
    }
  }
}

